--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-     testCompile "junit:junit:4.12"
+    compile "javax:javaee-api:8.0"
+    testCompile "junit:junit:4.12"
 }
 
